--- a/.github/workflows/deploy-back-vps.yml
+++ b/.github/workflows/deploy-back-vps.yml
@@ -1,4 +1,4 @@
-name: Deploy on vps
+name: Deploy backend on vps
 
 on:
   push:
@@ -10,3 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: ls
