🐛 add a yarn install

--- a/.github/workflows/deploy-front-vps.yml
+++ b/.github/workflows/deploy-front-vps.yml
@@ -26,6 +26,7 @@ jobs:
         working-directory: ./front
         run: |
           npm i -g ionic
+          yarn install
           ionic build
 
   build-and-push-image:
