--- a/.github/workflows/deploy-front-vps.yml
+++ b/.github/workflows/deploy-front-vps.yml
@@ -28,6 +28,10 @@ jobs:
           npm i -g ionic
           yarn install
           ionic build
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build-ionic
+          path: /wwww
 
   build-and-push-image:
     runs-on: ubuntu-latest
@@ -41,6 +45,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: build-ionic
       
       - name: Log in to the container registry
         uses: docker/login-action@v2
