--- a/.github/workflows/deploy-front-vps.yml
+++ b/.github/workflows/deploy-front-vps.yml
@@ -28,10 +28,11 @@ jobs:
           npm i -g ionic
           yarn install
           ionic build
+          
       - uses: actions/upload-artifact@v2
         with:
           name: build-ionic
-          path: /www
+          path: ./front/www
 
   build-and-push-image:
     runs-on: ubuntu-latest
