--- a/.github/workflows/deploy-front-vps.yml
+++ b/.github/workflows/deploy-front-vps.yml
@@ -50,6 +50,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: build-ionic
+          path: ./front/www
       
       - name: Log in to the container registry
         uses: docker/login-action@v2
