--- a/front/package.json
+++ b/front/package.json
@@ -14,13 +14,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
+    "@angular/common": "^16.1.7",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/router": "^16.1.8",
     "@angular/service-worker": "^16.0.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
@@ -28,7 +28,11 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@tyoes/": "angular/router",
+    "@types/": "angular/router",
+    "@types/angular": "^1.8.5",
     "ionicons": "^7.0.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.3.0",
