--- a/front/package.json
+++ b/front/package.json
@@ -24,13 +24,17 @@
     "@angular/service-worker": "^16.0.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/keyboard": "5.0.6",
+    "@capacitor/haptics": "^5.0.6",
+    "@capacitor/ios": "^5.2.2",
+    "@capacitor/keyboard": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@capacitor/toast": "^5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@ionic/pwa-elements": "^3.2.2",
     "@tyoes/": "angular/router",
     "@types/": "angular/router",
     "@types/angular": "^1.8.5",
+    "@types/ionic": "^3.19.0",
     "ionicons": "^7.0.0",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
