--- a/back/package.json
+++ b/back/package.json
@@ -32,10 +32,12 @@
     "@nestjs/swagger": "^7.1.6",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/passport-jwt": "^3.0.9",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
