--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "@angular/service-worker": "^16.0.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
+    "@capacitor/device": "^5.0.6",
     "@capacitor/haptics": "^5.0.6",
     "@capacitor/ios": "^5.2.2",
     "@capacitor/keyboard": "^5.0.6",
