--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
+    "@angular/animations": "^16.2.1",
     "@angular/common": "^16.1.7",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
@@ -24,6 +24,7 @@
     "@angular/service-worker": "^16.0.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.2",
+    "@capacitor/device": "^5.0.6",
     "@capacitor/haptics": "^5.0.6",
     "@capacitor/ios": "^5.2.2",
     "@capacitor/keyboard": "^5.0.6",
@@ -35,6 +36,7 @@
     "@types/angular": "^1.8.5",
     "ionicons": "^7.0.0",
     "jwt-decode": "^3.1.2",
+    "ngx-colors": "^3.5.2",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.3.0",
@@ -54,7 +56,7 @@
     "@capacitor/cli": "5.2.2",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^20.5.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.26.0",
