--- a/back/package.json
+++ b/back/package.json
@@ -28,12 +28,13 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^7.1.6",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/minio": "^7.1.1",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.9",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
