--- a/back/package.json
+++ b/back/package.json
@@ -28,12 +28,15 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^10.2.1",
+    "@nestjs/platform-socket.io": "^10.2.1",
     "@nestjs/swagger": "^7.1.6",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^7.6.17",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/passport-jwt": "^3.0.9",
+    "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -46,6 +49,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.1.2",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
