--- a/front/package.json
+++ b/front/package.json
@@ -34,9 +34,11 @@
     "@ionic/pwa-elements": "^3.2.2",
     "@tyoes/": "angular/router",
     "@types/angular": "^1.8.5",
+    "@types/socket.io": "^3.0.2",
     "ionicons": "^7.0.0",
     "jwt-decode": "^3.1.2",
     "ngx-colors": "^3.5.2",
+    "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.3.0",
