--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.1.8",
     "@angular/service-worker": "^16.0.0",
     "@capacitor/app": "5.0.6",
+    "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.2.2",
     "@capacitor/device": "^5.0.6",
     "@capacitor/haptics": "^5.0.6",
