--- a/back/package.json
+++ b/back/package.json
@@ -28,19 +28,22 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.2.1",
+    "@nestjs/platform-express": "^7.6.15",
     "@nestjs/platform-socket.io": "^10.2.1",
     "@nestjs/swagger": "^7.1.6",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^7.6.17",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.9",
     "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "minio": "^7.1.2",
+    "nestjs-minio": "^2.5.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
