--- a/front/ios/App/Podfile
+++ b/front/ios/App/Podfile
@@ -20,7 +20,7 @@ def capacitor_pods
   pod 'CapacitorToast', :path => '../../node_modules/@capacitor/toast'
 end
 
-target 'App' do
+target 'Hippochat' do
   capacitor_pods
   # Add your Pods here
 end
