--- a/back/package.json
+++ b/back/package.json
@@ -35,6 +35,7 @@
     "@nestjs/websockets": "^7.6.17",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/moment": "^2.13.0",
     "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.9",
     "@types/socket.io": "^3.0.2",
@@ -43,6 +44,8 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "minio": "^7.1.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "nestjs-minio": "^2.5.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
