--- a/front/package.json
+++ b/front/package.json
@@ -38,8 +38,10 @@
     "@types/socket.io": "^3.0.2",
     "ionicons": "^7.0.0",
     "jwt-decode": "^3.1.2",
+    "lottie-web": "^5.12.2",
     "moment-timezone": "^0.5.43",
     "ngx-colors": "^3.5.2",
+    "ngx-lottie": "^10.0.0",
     "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.3",
