--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^8.0.0",
