--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.2.2",
     "@capacitor/device": "^5.0.6",
+    "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "^5.0.6",
     "@capacitor/ios": "^5.2.2",
     "@capacitor/keyboard": "^5.0.6",
