--- a/front/package.json
+++ b/front/package.json
@@ -37,6 +37,7 @@
     "@tyoes/": "angular/router",
     "@types/angular": "^1.8.5",
     "@types/socket.io": "^3.0.2",
+    "invert-color": "^2.0.0",
     "ionicons": "^7.0.0",
     "jwt-decode": "^3.1.2",
     "lottie-web": "^5.12.2",
