--- a/front/ios/App/Podfile
+++ b/front/ios/App/Podfile
@@ -18,6 +18,7 @@ def capacitor_pods
   pod 'CapacitorHaptics', :path => '../../node_modules/@capacitor/haptics'
   pod 'CapacitorKeyboard', :path => '../../node_modules/@capacitor/keyboard'
   pod 'CapacitorPreferences', :path => '../../node_modules/@capacitor/preferences'
+  pod 'CapacitorPushNotifications', :path => '../../node_modules/@capacitor/push-notifications'
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
   pod 'CapacitorToast', :path => '../../node_modules/@capacitor/toast'
 end
@@ -25,8 +26,10 @@ end
 target 'Hippochat' do
   capacitor_pods
   # Add your Pods here
+  pod 'Firebase/Messaging' # Add this line
 end
 
 post_install do |installer|
   assertDeploymentTarget(installer)
 end
+
