--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "@capacitor/ios": "^5.2.2",
     "@capacitor/keyboard": "^5.0.6",
     "@capacitor/preferences": "^5.0.6",
+    "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/status-bar": "5.0.6",
     "@capacitor/toast": "^5.0.6",
     "@ionic/angular": "^7.0.0",
