--- a/back/package.json
+++ b/back/package.json
@@ -44,6 +44,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "heic-convert": "^1.2.4",
     "minio": "^7.1.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
