--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.1.8",
     "@angular/service-worker": "^16.0.0",
+    "@capacitor/android": "5.2.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.2.2",
@@ -30,8 +31,6 @@
     "@capacitor/haptics": "^5.0.6",
     "@capacitor/ios": "^5.2.2",
     "@capacitor/keyboard": "^5.0.6",
-    "@capacitor/preferences": "^5.0.6",
-    "@capacitor/status-bar": "5.0.6",
     "@capacitor/toast": "^5.0.6",
     "@ionic/angular": "^7.0.0",
     "@ionic/pwa-elements": "^3.2.2",
