--- a/front/package.json
+++ b/front/package.json
@@ -33,8 +33,8 @@
     "@capacitor/keyboard": "^5.0.6",
     "@capacitor/toast": "^5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@ionic/cli": "^7.1.5",
     "@ionic/pwa-elements": "^3.2.2",
-    "@tyoes/": "angular/router",
     "@types/angular": "^1.8.5",
     "@types/socket.io": "^3.0.2",
     "invert-color": "^2.0.0",
@@ -57,7 +57,7 @@
     "@angular-eslint/eslint-plugin-template": "^16.0.0",
     "@angular-eslint/schematics": "^16.0.0",
     "@angular-eslint/template-parser": "^16.0.0",
-    "@angular/cli": "^16.0.0",
+    "@angular/cli": "^16.2.10",
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
@@ -82,5 +82,7 @@
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "main": "karma.conf.js",
+  "license": "ISC"
 }
