🐛 (fix) fixed updates for apple release

--- a/front/ios/App/App/Info.plist
+++ b/front/ios/App/App/Info.plist
@@ -31,7 +31,7 @@
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string></string>
+	<string>L&apos;application a besoin d&apos;accéder à la libraire pour vous permettre de choisir une image à uploader</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
